@@ -320,6 +320,7 @@ enum {
   E_VLA_INIT                    = 290, /* variable length arrays can be initalized by empty initalizers only */
   W_ENUM_INT_RANGE_C2X          = 291, /* enumeration constant outside the range of int requires ISO C2X or later */
   E_Z88DK_CALLEE_VARARG         = 292, /* __z88dk_callee with variable arguments not supported */
+  W_CODEMEM_WRITE               = 293, /* attempt to write to read-only-memory */
 
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
